# libflac

./: CMakeLists.txt  README.md  benchmark.cpp  main.cpp
data/: аисд курсовая.docx
libflac/: CMakeLists.txt
libflac/include/: bit_reader.h  bit_writer.h  bitswap.h  crc.h  decoder.h  encoder.h  stream_info.h  utils.h
libflac/src/: bit_reader.cpp  bit_writer.cpp  decoder.cpp  encoder.cpp
src/: bit_reader.cpp  bit_reader.h  bit_writer.cpp  bit_writer.h
src/flac/: CMakeLists.txt  flac.cpp
